# sdparm

./: BSD_LICENSE  COPYING  CREDITS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  ar-lib  compile  config.guess  config.h.in  config.h.in~  config.sub  configure  configure.ac  configure.in  depcomp  install-sh  missing  notes.txt  sdparm.8  sdparm.spec
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: changelog  control  docs  rules
doc/: Makefile.am  Makefile.in  sas_disk_blink.8  scsi_ch_swp.8  sdparm.8  sdparm.html  sdparm_json.8
include/scsi/: sg_cmds.h
inhex/: sdp_io_hints.hex  sdp_sdeb_ahhhh.hex
scripts/: Makefile.am  Makefile.in  scsi_ch_swp
src/: Makefile.am  Makefile.chk_sdparm_data  Makefile.in  chk_sdparm_data.c  sdparm.c  sdparm.h  sdparm_access.c  sdparm_cmd.c  sdparm_data.c  sdparm_data_vendor.c  sdparm_vpd.c  sdparm_wscan.c  sg_cmds.c  sg_cmds_basic.c  sg_lib.c  sg_lib.h  sg_linux_inc.h
tags/release-0.90/: sdparm.8
tags/release-0.91/: INSTALL  configure.in  sdparm.8
tags/release-0.91/src/: Makefile.am  Makefile.in  sdparm.c
tags/release-0.92/: configure  sdparm.8  sdparm.spec
tags/release-0.92/autom4te.cache/: output.0
tags/release-0.92/src/: Makefile.am
tags/release-0.93/: CREDITS  configure.in
tags/release-0.93/autom4te.cache/: traces.1
tags/release-0.94/: ChangeLog  INSTALL  README  configure  notes.txt
tags/release-0.95/: ChangeLog  INSTALL  configure  sdparm.8
tags/release-0.95/src/: sdparm.h  sdparm_data.c
tags/release-0.96/: ChangeLog  INSTALL  configure.ac  notes.txt  sdparm.8
tags/release-0.96/debian/: changelog
tags/release-0.96/src/: sdparm.c  sdparm_data.c  sg_lib.c
tags/release-0.97/: INSTALL  configure  notes.txt
tags/release-0.97/debian/: changelog
tags/release-0.97/doc/: sdparm.html
tags/release-0.97/src/: Makefile.am  Makefile.in  sdparm.c  sdparm_vpd.c
tags/release-0.98/: CREDITS  configure  sdparm.8  sdparm.spec
tags/release-0.98/autom4te.cache/: traces.1
tags/release-0.98/doc/: sdparm.html
tags/release-0.98/src/: Makefile.in  sdparm.h  sdparm_access.c  sg_lib.h
tags/release-0.99/: INSTALL  README
tags/release-0.99/autom4te.cache/: output.1
tags/release-0.99/debian/: changelog
tags/release-0.99/doc/: sdparm.html
tags/release-0.99/src/: Makefile.am  sdparm_cmd.c  sdparm_vpd.c
tags/release-1.00/: Makefile.in  config.h.in~  configure  sdparm.8
tags/release-1.00/src/: Makefile.am  sdparm.c  sdparm_cmd.c  sdparm_wscan.c
tags/release-1.01/: ChangeLog  INSTALL  sdparm.8  sdparm.spec
tags/release-1.01/autom4te.cache/: traces.0
tags/release-1.01/debian/: changelog
tags/release-1.01/src/: sdparm.c  sdparm_cmd.c
tags/release-1.04/: ChangeLog  configure.ac  sdparm.spec
tags/release-1.04/doc/: sdparm.8
tags/release-1.04/src/: Makefile.am  sdparm.c
tags/release-1.05/: ChangeLog  configure.ac
tags/release-1.05/src/: sdparm.h  sdparm_vpd.c
tags/release-1.06/: config.h.in
tags/release-1.06/debian/: changelog
tags/release-1.06/src/: sdparm.c  sdparm_access.c  sdparm_wscan.c
tags/release-1.07/: configure.ac  sdparm.spec
tags/release-1.07/debian/: changelog
tags/release-1.07/src/: Makefile.am  sdparm.c
tags/release-1.08/: Makefile.in
tags/release-1.08/src/: sdparm_cmd.c  sdparm_data.c
tags/release-1.09/: Makefile.in  README
tags/release-1.09/debian/: changelog
tags/release-1.09/scripts/: Makefile.in
tags/release-1.09/src/: Makefile.in  sdparm_data_vendor.c  sdparm_wscan.c
tags/release-1.10/: configure
tags/release-1.10/debian/: changelog
tags/release-1.10/scripts/: Makefile.in
tags/release-1.10/src/: Makefile.am  sdparm.h  sdparm_data_vendor.c
trunk/: CREDITS  ChangeLog  Makefile.in  README  config.h.in  config.h.in~  configure  configure.ac  configure.in  notes.txt  sdparm.8  sdparm.spec
trunk/autom4te.cache/: output.0  traces.0  traces.1
trunk/debian/: changelog
trunk/doc/: Makefile.in  sdparm.8  sdparm.html
trunk/include/scsi/: sg_cmds.h  sg_lib.h
trunk/scripts/: Makefile.in
trunk/src/: Makefile.am  Makefile.in  chk_sdparm_data.c  sdparm.c  sdparm.h  sdparm_access.c  sdparm_cmd.c  sdparm_data.c  sdparm_data_vendor.c  sdparm_vpd.c  sg_cmds.c  sg_cmds_basic.h  sg_lib.c
