
if OS_LINUX

dist_man_MANS = sdparm.8 sdparm_json.8 sas_disk_blink.8 scsi_ch_swp.8

endif

if OS_WIN32_MINGW

dist_man_MANS = sdparm.8 sdparm_json.8 sas_disk_blink.8

endif

if OS_WIN32_CYGWIN

dist_man_MANS = sdparm.8 sdparm_json.8 sas_disk_blink.8

endif

if OS_FREEBSD

dist_man_MANS = sdparm.8 sdparm_json.8 sas_disk_blink.8

endif

if OS_SOLARIS

dist_man_MANS = sdparm.8 sdparm_json.8 sas_disk_blink.8

endif

if OS_OSF

dist_man_MANS = sdparm.8 sdparm_json.8 sas_disk_blink.8

endif

distclean-local:
	rm -rf \
          .deps \
          Makefile.in
