
if OS_LINUX

dist_bin_SCRIPTS = sas_disk_blink scsi_ch_swp

endif

if OS_WIN32_MINGW

dist_bin_SCRIPTS = sas_disk_blink

endif

if OS_WIN32_CYGWIN

dist_bin_SCRIPTS = sas_disk_blink

endif

if OS_FREEBSD

dist_bin_SCRIPTS = sas_disk_blink

endif

if OS_SOLARIS

dist_bin_SCRIPTS = sas_disk_blink

endif

if OS_OSF

dist_bin_SCRIPTS = sas_disk_blink

endif

distclean-local:
	rm -rf \
          .deps \
          Makefile.in
